--- a/parts/22.sroiq.tex
+++ b/parts/22.sroiq.tex
@@ -56,7 +56,7 @@ The TBox $\mathcal{T}$ describes the relationship between different concepts. In
     \item all finite subsets of individual names $\{ \, a_1, \dots, a_n \, \} \subseteq \mathrm{N}_I$ are concepts, called \emph{nominal concepts,}
     \item if $C$ and $D$ are concepts, the $\lnot C$ (\emph{negation}), $C \sqcup D$ (\emph{union}), and $C \sqcap D$ (\emph{intersection}) are also concepts,
     \item if $C$ is a concept and $r \in \mathbf{R}$ a (possible non-simple) role, then $\exists r . C$ (\emph{existential quantification}) and $\forall r . C$ (\emph{universal quantification}) are also concepts, and
-    \item if $C$ is a concept, $s \in \mathbf{R}^S$ a simple role and $N \in \mathbb{N}_0$ a non-negative number, then $\exists r . \mathrm{Self}$ (\emph{self restriction}), $\leq N s . C$ (\emph{at-most restriction}), and $\geq N s. C$ (\emph{at-least restriction}) are concepts, the last two may together be referred to as \emph{qualified number restrictions.}
+    \item if $C$ is a concept, $s \in \mathbf{R}^S$ a simple role and $n \in \mathbb{N}_0$ a non-negative number, then $\exists r . \mathrm{Self}$ (\emph{self restriction}), $\leq n s . C$ (\emph{at-most restriction}), and $\geq n s. C$ (\emph{at-least restriction}) are concepts, the last two may together be referred to as \emph{qualified number restrictions.}
 \end{itemize}
 
 Given two concepts $C$ and $D$, a \emph{general concept inclusion axiom} (GCI) \emph{}is a statement of the form $C \sqsubseteq D$. The TBox $\mathcal{T}$ is a finite set of general concept inclusion axioms.
@@ -97,8 +97,8 @@ An interpretation maps the universal role $u$ to $u^\mathcal{I} = \Delta^\mathca
     \item $\exists r . C$ holds for all individuals that are connected by some element in the extension of $r$ to an individual in the extension of $C$, formally $(\exists r . C)^\mathcal{I} = \{ \, \delta_1 \in \Delta^\mathcal{I} \mid \exists \delta_2 \in \Delta^\mathcal{I} \, . \; \langle \delta_1, \delta_2 \rangle \in r^\mathcal{I} \, \land \, \delta_2 \in C^\mathcal{I} \, \}$.
     \item $\forall r . C$ refers to all domain elements for which all elements in the extension of $r$ connect them to elements in the extension of $C$, that is $(\forall r . C)^\mathcal{I} = \{ \, \delta_1 \in \Delta^\mathcal{I} \mid \forall \delta_2 \in \Delta^\mathcal{I} \, . \; \langle \delta_1, \delta_2 \rangle \in r^\mathcal{I} \to \delta_2 \in C^\mathcal{I} \, \}$.
     \item $\exists r . \mathrm{Self}$ indicates all individuals that the extension of $r$ connects to themselves, hence we let $(\exists r . \mathrm{Self})^\mathcal{I} = \{ \, \delta \in \Delta^\mathcal{I} \mid \langle \delta, \delta \rangle \in r^\mathcal{I} \, \}$.
-    \item $\leq N r . C$ represents those individuals that have at most $N$ other individuals they are $r$-related to in the concept extension of $C$, that is  $(\leq N r . C)^\mathcal{I} = \{ \, \delta_1 \in \Delta^\mathcal{I} \mid \left| \{ \, \delta_2 \in \Delta^\mathcal{I} \mid \langle \delta_1, \delta_2 \rangle \in r^\mathcal{I} \, \land \; \delta_2 \in C^\mathcal{I} \, \} \right| \leq N \}$ where $|S|$ denotes the cardinality of a set $S$.
-    \item $\geq N r.C$ corollary to the case above indicates those domain elements that have at least $N$ such $r$-related elements, $(\geq N r . C)^\mathcal{I} = \{ \, \delta_1 \in \Delta^\mathcal{I} \mid \left| \{ \, \delta_2 \in \Delta^\mathcal{I} \mid \langle \delta_1, \delta_2 \rangle \in r^\mathcal{I} \, \land \; \delta_2 \in C^\mathcal{I} \, \} \right| \geq N \}$.
+    \item $\leq n r . C$ represents those individuals that have at most $n$ other individuals they are $r$-related to in the concept extension of $C$, that is  $(\leq n r . C)^\mathcal{I} = \{ \, \delta_1 \in \Delta^\mathcal{I} \mid \left| \{ \, \delta_2 \in \Delta^\mathcal{I} \mid \langle \delta_1, \delta_2 \rangle \in r^\mathcal{I} \, \land \; \delta_2 \in C^\mathcal{I} \, \} \right| \leq n \}$ where $|S|$ denotes the cardinality of a set $S$.
+    \item $\geq n r.C$ corollary to the case above indicates those domain elements that have at least $N$ such $r$-related elements, $(\geq n r . C)^\mathcal{I} = \{ \, \delta_1 \in \Delta^\mathcal{I} \mid \left| \{ \, \delta_2 \in \Delta^\mathcal{I} \mid \langle \delta_1, \delta_2 \rangle \in r^\mathcal{I} \, \land \; \delta_2 \in C^\mathcal{I} \, \} \right| \geq n \}$.
 \end{itemize}
 
 \subsubsection{Satisfaction of Axioms}
