--- a/bibliography.bib
+++ b/bibliography.bib
@@ -56,3 +56,11 @@
   pages   = {57--67},
   year    = {2006}
 }
+
+@unpublished{confalonieri2022irresistible,
+  author = {Confalonieri, Roberto and Galliani, Pietro and Kutz, Oliver and Porello, Daniele and Righetti, Guendalina and Troquard, Nicolas},
+  title = {Irresistible Refinement Operators for Expressive Description Logics},
+  year = {2022},
+  note = {Unpublished manuscript},
+  institution = {Free University of Bozen-Bolzano, Italy \& University of Genova}
+}
