Transformed notes into LaTeX

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -62,5 +62,118 @@
   title = {Irresistible Refinement Operators for Expressive Description Logics},
   year = {2022},
   note = {Unpublished manuscript},
-  institution = {Free University of Bozen-Bolzano, Italy \& University of Genova}
+  institution = {Free University of Bozen-Bolzano, Italy \& University of Geneva}
+}
+
+@inproceedings{baader2018making,
+  title={Making repairs in description logics more gentle},
+  author={Baader, Franz and Kriegel, Francesco and Nuradiansyah, Adrian and Pe{\~n}aloza, Rafael},
+  booktitle={Sixteenth International Conference on Principles of Knowledge Representation and Reasoning},
+  year={2018}
+}
+
+@article{reiter1987theory,
+  title={A theory of diagnosis from first principles},
+  author={Reiter, Raymond},
+  journal={Artificial intelligence},
+  volume={32},
+  number={1},
+  pages={57--95},
+  year={1987},
+  publisher={Elsevier}
+}
+
+@article{kalyanpur2007finding,
+  title={Finding all justifications of OWL DL entailments},
+  author={Kalyanpur, Aditya and Parsia, Bijan and Horridge, Matthew and Sirin, Evren and others},
+  journal={ISWC/ASWC},
+  volume={4825},
+  pages={267--280},
+  year={2007}
+}
+
+@inproceedings{schlobach2003non,
+  title={Non-standard reasoning services for the debugging of description logic terminologies},
+  author={Schlobach, Stefan and Cornet, Ronald and others},
+  booktitle={Ijcai},
+  volume={3},
+  pages={355--362},
+  year={2003}
+}
+
+@article{schlobach2007debugging,
+  title={Debugging incoherent terminologies},
+  author={Schlobach, Stefan and Huang, Zhisheng and Cornet, Ronald and Van Harmelen, Frank},
+  journal={Journal of Automated Reasoning},
+  volume={39},
+  pages={317--349},
+  year={2007},
+  publisher={Springer}
+}
+
+@inproceedings{junker2004preferred,
+  title={Preferred explanations and relaxations for over-constrained problems},
+  author={Junker, Ulrich},
+  booktitle={AAAI-2004},
+  year={2004}
+}
+
+@inproceedings{marques2013minimal,
+  title={Minimal sets over monotone predicates in boolean formulae},
+  author={Marques-Silva, Joao and Janota, Mikol{\'a}{\v{s}} and Belov, Anton},
+  booktitle={Computer Aided Verification: 25th International Conference, CAV 2013, Saint Petersburg, Russia, July 13-19, 2013. Proceedings 25},
+  pages={592--607},
+  year={2013},
+  organization={Springer}
+}
+
+@inproceedings{shchekotykhin2015mergexplain,
+  title={MergeXplain: Fast computation of multiple conflicts for diagnosis},
+  author={Shchekotykhin, Kostyantyn and Jannach, Dietmar and Schmitz, Thomas},
+  booktitle={Twenty-Fourth International Joint Conference on Artificial Intelligence},
+  year={2015}
+}
+
+@article{malouf2007maximal,
+  title={Maximal consistent subsets},
+  author={Malouf, Robert},
+  journal={Computational Linguistics},
+  volume={33},
+  number={2},
+  pages={153--160},
+  year={2007},
+  publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
+}
+
+@inproceedings{horridge2008laconic,
+  title={Laconic and precise justifications in OWL},
+  author={Horridge, Matthew and Parsia, Bijan and Sattler, Ulrike},
+  booktitle={The Semantic Web-ISWC 2008: 7th International Semantic Web Conference, ISWC 2008, Karlsruhe, Germany, October 26-30, 2008. Proceedings 7},
+  pages={323--338},
+  year={2008},
+  organization={Springer}
+}
+
+@inproceedings{troquard2018repairing,
+  title={Repairing ontologies via axiom weakening},
+  author={Troquard, Nicolas and Confalonieri, Roberto and Galliani, Pietro and Penaloza, Rafael and Porello, Daniele and Kutz, Oliver},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={32},
+  number={1},
+  year={2018}
+}
+
+@article{confalonieri2020towards,
+  title={Towards even more irresistible axiom weakening},
+  author={Confalonieri, Roberto and Galliani, Pietro and Kutz, Oliver and Porello, Daniele and Righetti, Guendalina and Toquard, Nicolas},
+  year={2020}
+}
+
+@inproceedings{lam2008fine,
+  title={A fine-grained approach to resolving unsatisfiable ontologies},
+  author={Lam, Joey Sik Chun and Sleeman, Derek and Pan, Jeff Z and Vasconcelos, Wamberto},
+  booktitle={Journal on Data Semantics X},
+  pages={62--95},
+  year={2008},
+  organization={Springer}
 }
