--- a/sections/2.background.tex
+++ b/sections/2.background.tex
@@ -1,19 +1,19 @@
-\section{Ontology Bugs}
+\section{Ontology Bugs} \label{ontology-bugs}
 
 \input{sections/2.1.bugs.tex}
 
-\section{Ontologies in Description Logics}
+\section{Ontologies in Description Logics} \label{ontologies-in-dl}
 
 \input{sections/2.2.dl.tex}
 
-\section{Repairing Ontologies}
+\section{Repairing Ontologies} \label{ontology-repair}
 
 \input{sections/2.3.repair.tex}
 
-\section{Axiom Weakening}
+\section{Axiom Weakening} \label{axiom-weakening}
 
 \input{sections/2.4.weakening.tex}
 
-\section{Problems of Expressivity}
+\section{Problems of Expressivity} \label{expressivity-problems}
 
 \input{sections/2.5.expressivity.tex}
