--- a/sections/4.implementation.tex
+++ b/sections/4.implementation.tex
@@ -1,4 +1,4 @@
-\section{Implementation of $\mathcal{SROIQ}$ Weakening}
+\section{Implementation of \texorpdfstring{$\mathcal{SROIQ}$}{SROIQ} Weakening}
 
 \input{sections/4.1.prototype.tex}
 
