Changed some of the latex

--- a/extra/sroiq-dl.tex
+++ b/extra/sroiq-dl.tex
@@ -24,7 +24,7 @@
 \newtheorem*{note}{Note}
 \newtheorem*{remark}{Remark}
 
-\addbibresource{bibliography.bib}
+\addbibresource{../bibliography.bib}
 
 \allowdisplaybreaks
 
@@ -42,11 +42,11 @@
 
 \section{\texorpdfstring{$\mathcal{SROIQ}$}{SROIQ} Syntax} \label{sroiq-syntax}
 
-\input{sections/2.2.1.1.sroiq-syn.tex}
+\input{../sections/2.2.1.1.sroiq-syn.tex}
 
 \section{\texorpdfstring{$\mathcal{SROIQ}$}{SROIQ} Semantics} \label{sroiq-semantics}
 
-\input{sections/2.2.1.2.sroiq-sem.tex}
+\input{../sections/2.2.1.2.sroiq-sem.tex}
 
 \printbibliography
 
