Updated the notes and small title change

--- a/main.tex
+++ b/main.tex
@@ -98,7 +98,7 @@
 
 \appendix
 
-\chapter{Correctness of Axiom Weakening} \label{proof-weakening}
+\chapter{Closure over RBox Weakening} \label{proof-weakening}
 
 \input{sections/a.proof-weakening.tex}
 
