A tiny change in wording

--- a/sections/2.2.dl.tex
+++ b/sections/2.2.dl.tex
@@ -5,7 +5,7 @@ While ontologies can be represented using a number of different formalisms, for 
 
 Description logics are also the basis of the \emph{Web Ontology Language} (OWL) \cite{hitzler2009owl_primer,motik2009owl_spec}, which is a World Wide Web Consortium (W3C) recommendation and is extensively used as part of the semantic web. While the OWL 2 language is based on $\mathcal{SROIQ}$, OWL 2 also defines three so-called profiles that are fragments of the full OWL 2 language that trade-off expressive power for more efficient reasoning \cite{motik2009owl_profiles,motik2009owl_spec}. The OWL 2 DL profile, which is the most expressive of the profiles that is still decidable\footnote{The most expressive profile, OWL 2 Full, is not decidable.}, is based on $\mathcal{SROIQ}$.
 
-The following sections will introduce the description logic $\mathcal{SROIQ}$ and the OWL 2 language. The relation between the two will also be discussed. The description is also loosely based on the description in \cite{rudolph2011foundations}.
+The following sections will introduce the description logic $\mathcal{SROIQ}$ and the OWL 2 language. The relation between the two will also be discussed. The description is based on the one presented in \cite{rudolph2011foundations}.
 
 \subsection{The \texorpdfstring{$\mathcal{SROIQ}$}{SROIQ} Description Logic} \label{sroiq-def}
 
