--- a/sections/3.theory.tex
+++ b/sections/3.theory.tex
@@ -1,7 +1,15 @@
-\section{RBox weakening}
+\section{Problems of Expressivity} \label{expressivity-problems}
 
-\input{sections/3.1.rbox.tex}
+\input{sections/3.1.expressivity.tex}
 
-\section{Repair using Heuristic Search}
+\section{Axiom Weakening} \label{axiom-weakening}
 
-\input{sections/3.2.search.tex}
+\input{sections/3.2.weakening.tex}
+
+\section{RBox weakening} \label{rbox-weakening}
+
+\input{sections/3.3.rbox.tex}
+
+\section{Finding the Best Repairs} \label{best-repair}
+
+\input{sections/3.4.search.tex}
